[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/menus/ingame/item_panel_ui.gd" type="Script" id=1]
[ext_resource path="res://ui/menus/shop/item_description.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=3]

[node name="ItemPanelUI" type="PanelContainer"]
margin_left = 508.0
margin_right = 852.0
margin_bottom = 322.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 4
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 354.0
margin_bottom = 317.0
custom_constants/margin_right = 14
custom_constants/margin_top = 14
custom_constants/margin_left = 14
custom_constants/margin_bottom = 14

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 335.0
margin_bottom = 298.0

[node name="ItemDescription" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 321.0
margin_bottom = 96.0
custom_constants/separation = 20

[connection signal="mouse_exited_category" from="MarginContainer/VBoxContainer/ItemDescription" to="." method="_on_ItemDescription_mouse_exited_category"]
[connection signal="mouse_hovered_category" from="MarginContainer/VBoxContainer/ItemDescription" to="." method="_on_ItemDescription_mouse_hovered_category"]
